--- a/HTML/gamica class 9/home assignment 1/index.html
+++ b/HTML/gamica class 9/home assignment 1/index.html
@@ -51,6 +51,17 @@
          
         </div>
       </nav>
-     
+     <div class="header">
+<div class="row">
+  <div class="col-sm-7">
+    <img src="bg.jpeg" alt="" width="700px" height="400px">
+  </div>
+  <div class="col-sm-5" >
+    <h1 class="heading">
+      Helping with any of your business needs
+    </h1>
+  </div>
+</div>
+     </div>
 </body>
 </html>
